<resources>
    <string name="app_name">E-APARAT</string>

    <!--log in-->
    <string name="nama">Nama</string>
    <string name="pass">Kata Sandi</string>
    <string name="tb_masuk">Masuk</string>
    <string name="tx_login">Belum Punya Akun</string>
    <string name="tx_login1">Lupa Kata Sandi?</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
